[project]
name = "autoclip"
version = "1.3.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "markdown>=3.8",
    "scons>=4.9.1",
]

[tool.ruff]
src = ["addon", "../nvda/source"]
line-length = 100
target-version = "py311"
builtins = ["_"]
[tool.ruff.lint]
select = ["E", "A", "F", "B", "UP", "PL", "RUF", "SIM", "C4", "INP", "RET", "PIE", "G", "S", "PERF"]
ignore = ["E501", "S603"]

[tool.ruff.format]
line-ending = "lf"
